Added Products Page

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <header>
     <a href="/">Home</a> |
-    <a href="/about">About</a>
+    <a href="/about">About</a> |
+    <a href="/products">Products</a>
 </header>
 
 {% block content %}{% endblock %}
